# ojichat_rs

./: Cargo.toml
src/: generator.rs
src/pattern/: emoji_type.rs  onara.rs  onara_messages.rs  onara_pattern.rs  tag_type.rs
