[package]
name = "ojichat"
version = "0.1.4"
authors = [
	"Tatsumi Gamou <tatsumigamou@yahoo.co.jp>",
	"SyoBoN <syobon@syobon.net>",
]
edition = "2021"

description = 'Ojisan Nanchatte (ojichat) library for rust'

repository = "https://github.com/gamoutatsumi/ojichat_rs"

readme = "README.md"

license = "MIT"

[dependencies]
gimei = "0.2.0"
kanaria = "0.2.0"
lindera = { version = "0.41.0", features = ["ipadic"] }
lindera-dictionary = "0.41.0"
rand = "0.9.0"
regex = "1.11.1"

[target.'cfg(wasm32)'.dependencies.getrandom]
version = "0.2.15"
features = ["js"]

[dev-dependencies]
rusty-hook = "0.11.2"